--- a/actors-service/appsettings.json
+++ b/actors-service/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db;Port=5432;Database=actors-db;User Id=david;Password=david;"
+  }
 }
