--- a/actors-service/appsettings.Development.json
+++ b/actors-service/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=actors-db;User Id=david;Password=david;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=ag53-db;User Id=david;Password=david;"
   }
 }
