--- a/actors-service/appsettings.json
+++ b/actors-service/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Port=5432;Database=actors-db;User Id=david;Password=david;"
+    "DefaultConnection": "Server=db;Port=5432;Database=ag53-db;User Id=david;Password=david;"
   }
 }
