--- a/movies-service/movies-service.csproj
+++ b/movies-service/movies-service.csproj
@@ -19,6 +19,7 @@
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="xunit" Version="2.6.6" />
     </ItemGroup>
 
     <PropertyGroup>
