Update actors to include movies

--- a/actors-service/appsettings.Development.json
+++ b/actors-service/appsettings.Development.json
@@ -7,5 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=ag53-db;User Id=david;Password=david;"
-  }
+  },
+  "MoviesServiceUrl": "http://localhost:5072",
+  "ActingServiceUrl": "http://localhost:5076"
 }
