--- a/actors-service/appsettings.json
+++ b/actors-service/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=db;Port=5432;Database=ag53-db;User Id=david;Password=david;"
-  }
+  },
+  "MoviesServiceUrl": "http://movies-service:8081",
+  "ActingServiceUrl": "http://acting-service:8082"
 }
