Small fixes regarding objects

--- a/movies-service/appsettings.json
+++ b/movies-service/appsettings.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=db;Port=5432;Database=ag53-db;User Id=david;Password=david;"
   },
-  "MinIOEndpoint": "localhost:9000",
+  "MinIOEndpoint": "minio:9000",
   "MinIOAccessKey": "ppM3vw7431URgpAR9RPk",
   "MinIOSecretKey": "QTmXq0NA8k7gWmLtVfyeTHQ4AcN581IxUcRuf3Cw"
 }
