--- a/movies-service/appsettings.Development.json
+++ b/movies-service/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=ag53-db;User Id=david;Password=david;"
-  }
+  },
+  "MinIOEndpoint": "localhost:9000",
+  "MinIOAccessKey": "ppM3vw7431URgpAR9RPk",
+  "MinIOSecretKey": "QTmXq0NA8k7gWmLtVfyeTHQ4AcN581IxUcRuf3Cw"
 }
